--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     margin: 0;
 }
 
+/* First Section */
+
 .header {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
-    
     padding: 20px 200px 100px 200px;
 }
 
@@ -68,4 +69,39 @@ body {
 .header-image {
     background-color: #b8b7b6;
     padding: 100px;
+}
+
+/* Second section */
+
+.information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 0 80px 0;
+}
+
+.info-container {
+    display: flex;
+    gap: 52px;
+    margin-top: 40px;
+}
+
+.info-group {
+    max-width: 180px;
+    text-align: center;
+}
+
+.info-header-text {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.info-image {
+    width: 180px;
+    height: 180px;
+    border-style: solid;
+    border-color: #3882F6;
+    border-radius: 12%;
+    margin: 0 auto 5px auto;
 }
