--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* First Section */
 
-.header {
+.header-section {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
@@ -73,11 +73,11 @@ body {
 
 /* Second section */
 
-.information {
+.information-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0 80px 0;
+    padding: 40px 0 100px 0;
 }
 
 .info-container {
@@ -104,4 +104,30 @@ body {
     border-color: #3882F6;
     border-radius: 12%;
     margin: 0 auto 5px auto;
+}
+
+.qoute-section {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0 100px 0;
+}
+
+.qoute-container {
+    max-width: 950px;
+    display: flex;
+    flex-direction: column;
+}
+
+.qoute-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.qoute-signature {
+    font-weight: bold;
+    align-self: flex-end;
+    margin-right: 25px;
 }
