Create call to action section

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     margin-top: 5px;
     padding: 5px 20px 5px 20px;
     background-color: #3882F6;
-    border-radius: 12%;
+    border-radius: 12px;
     border: none;
     color: #E5E7EB;
     font-weight: bold;
@@ -103,7 +103,7 @@ body {
     height: 180px;
     border-style: solid;
     border-color: #3882F6;
-    border-radius: 12%;
+    border-radius: 12px;
     margin: 0 auto 5px auto;
 }
 
@@ -133,4 +133,39 @@ body {
     font-weight: bold;
     align-self: flex-end;
     margin-right: 25px;
+}
+
+/* Fourth section */
+
+.cta-section {
+    display: flex;
+    justify-content: center;
+    padding: 100px 0 100px 0;
+}
+
+.cta-box {
+    display: flex;
+    padding: 50px 150px;
+    background-color: #3882F6;
+    border-radius: 10px;
+    gap: 120px;
+}
+
+.cta-button {
+    background-color: #3882F6;
+    border-style: solid;
+    border-color: #F9FAF8;
+    color: #F9FAF8;
+    font-weight: bold;
+    padding: 0 25px;
+    border-radius: 12px;
+}
+
+.cta-left {
+    color: #F9FAF8;
+}
+
+.cta-title {
+    font-size: 18px;
+    font-weight: bold;
 }
